[BUG] Fixed issue where back button was too short in IE7

--- a/stylesheets/_actionsbar.scss
+++ b/stylesheets/_actionsbar.scss
@@ -1,17 +1,3 @@
-// .actionsbar {
-// 	height: $baseLineHeight * 1.5;
-// 	margin: 0 $gutterWidth ($baseLineHeight / 2) $gutterWidth;
-// 	outline: 1px solid red;
-
-// 	h1 {
-// 		@include inline-block;
-// 		font-size: 1.75em;
-// 		line-height: 1em;
-// 		border: 1px solid red;
-// 	}
-
-// }
-
 .actionsbar {
 	@include inline-block;
 	margin: $line-height-base $gutter-width 2px $gutter-width;
@@ -25,4 +11,11 @@
 
 .actionsbar--right {
 	float: right;
+}
+
+@include ie-lte(7) {
+	.btn__back {
+		margin-right: -1px;
+		padding: 11px;
+	}
 }
